[package]
name = "tantivy-fst"
version = "0.3.0"
authors = ["Andrew Gallant <jamslam@gmail.com>"] # forked from Andrew Gallant's work
description = """
This is a tantivy-specific fork from the fst crate from Burntsushi. (Please use the fst crate instead.)
"""
documentation = "https://docs.rs/tantivy-fst"
repository = "https://github.com/tantivy-search/fst"
readme = "README.md"
keywords = ["donotuseme"]
license = "Unlicense/MIT"
edition = "2018"

[[bench]]
name = "build"
path = "./benches/build.rs"
test = false
bench = true

[[bench]]
name = "search"
path = "./benches/search.rs"
test = false
bench = true

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx", branch = "master" }
regex-syntax = {path="./regex-syntax"}
utf8-ranges = {path="./utf8-ranges-sgx"}


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
fnv = "1.0.5"
lazy_static = "1.4"
quickcheck = { version = "0.7", default-features = false }
rand = "0.5"
proptest = "0.9.4"

[profile.release]
debug = true

[profile.bench]
opt-level = 3
debug = true
